clear results & update feedbackforms test